# IntegrityCore

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE_DIAGRAM.md
scripts/: trace_flow.py
src/integritycore/: cli.py
src/integritycore.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/integritycore/adapters/: cloud.py  connections.py  executor.py
src/integritycore/agents/: graph.py  loop.py
src/integritycore/core/: grounding.py  prompt_validation.py  verifier.py
src/integritycore/db/: engine.py  gold_queries.py  models.py
src/integritycore/metadata/: __init__.py  introspectors.py  manager.py  models.py
src/integritycore/scheduler/: runner.py
src/integritycore/ui/: api.py  dashboard.py
tests/: test_verifier.py
